--- a/views/rate.ejs
+++ b/views/rate.ejs
@@ -1,12 +1,16 @@
 <html>
 <head>
     <title>Rate</title>
+    <meta charset="utf-8">   
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Shipping Rate</h1>
-    <p>Type: <%= type %></p>
-    <p>Weight: <%= weight %> oz.</p>
-    <p>Rate: <%= rate %></p>
-        
+    <div class="container">
+        <h1>Shipping Rate</h1>
+        <p>Type: <%= type %></p>
+        <p>Weight: <%= weight %> oz.</p>
+        <p>Rate: <%= rate %></p>
+    </div>
 </body>
 </html>
